--- a/20250519/example.html
+++ b/20250519/example.html
@@ -14,8 +14,8 @@
        <section>
         <article id="a1"> <h1> REAVER</h1></article>
         <article id="a2"><p>Es un pack de skins del juego titulado "Valorant" estas skins son de la rareza premium </p> </article>
-        <article id="a3"> botton</article>
-        <article id="a4"> <img src="../images/reaver.jpg" alt="reaver" width="500px"></article>
+        <article id="a3"> <a href="">ver mas</a></article>
+        <article id="a4"> <img src="../images/reaver.jpg" alt="reaver" width="900px"></article>
        </section>
     </main>
     <footer>
