--- a/20250424/index.html
+++ b/20250424/index.html
@@ -14,7 +14,7 @@
 <body>
     <header> <h1>Formulario</h1></header>
     <main> 
-        <form action="">
+        <form action="" id="form">
             <label for="inName">*NOMBRE: <input type="text" name="inName" id="inName" required> </label>
             <label for="inLastname">*APELLIDO: <input type="text" name="inLastname " id="inLastname" required> </label>
             <label for="inPhone">CEL: <input type="text" name="inPhone " id="inPhone" placeholder="+57 333 111 4444"> </label>
@@ -37,6 +37,10 @@
             <label for="Com">COMENTARIOS: <br> <textarea name="com" id="com"></textarea ></label>
             <label for="send"> <input type="button" value="Enviar"></label>
         </form>
+        <section>
+            <h2>nuestras redes:</h2>
+            
+        </section>
     </main>
     <footer> <p> volver al <a href="../index.html" title="portafolio">inicio</a><br>
         &copy; Fernando Rojas-2025</p></footer>
