--- a/proyecto/sug.html
+++ b/proyecto/sug.html
@@ -28,7 +28,12 @@
             <label for="inEmpresa">*Empresa <input type="empresa" name="inEmpresa" id="inEmpresa" ></label>
             <label for="Com">motivo de contacto: <br> <textarea name="com" id="com"></textarea ></label>
             <label for="send"> <input type="button" value="Enviar"></label>
-        </form>
+        </form>  
+         <section id="red">
+            <h2>nuestras redes:</h2>
+            <a href="https://www.instagram.com/quinoaclub"><img src="imgs/ig.png" alt="instagram logo" width="150px"></a>
+            <a href="https://www.facebook.com/quinoaclub"><img src="imgs/face.jpg" alt="facebook logo" width="150px"></a>
+        </section>
     </main>
       <footer>
         <p>&copy;Fernando Rojas-2025 </p>
